# RobosenJS

./: .prettierrc.yml  README.md  index.d.ts  index.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: publish.yml
recordings/K1/: test.json
robosen_py/: __init__.py  k1.py  robot.py  transports.py
scripts/: demo.js  main.js
scripts_py/: demo.py  repl.py
src/: Robot.d.ts  Robot.js
src/K1/: robot.json
src/K1/llm/joint/: systemPrompt.txt  userPrompt.txt
test/: Robot.test.js
tests_py/: test_robot_py.py
