[project]
name = "robosen-py"
version = "0.1.0"
description = "Python SDK for Robosen K1, ported from RobosenJS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bleak>=0.22.3",
  "openai>=1.30.0",
]

[project.optional-dependencies]
voice = [
  "sounddevice>=0.4.7",
  "soundfile>=0.12.1",
  "numpy>=1.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
